# IRIS-Project

./: .gitignore  AdaloggerInfo.md  GPSinfo.md  LICENSE  M0_info.md  README.md  Report.md  SDCardInfo.md
legacy/analysis/: README.md  pyproject.toml
pythonEnv/: README.md  Report.md  pyproject.toml
pythonEnv/setInterpreter/: test.ipynb
pythonEnv/tests/: Buffers.ipynb  M0M4_Comparison.ipynb  MDA_Tests.ipynb  Pull_SD_files.py  README.md  analysis_plotter.py  analysis_plotter_2Pins.py  bufferTests.ipynb  readSerialLine.py  serial_send_LED.py  serialtesting.ipynb  test.py  time_tests.ipynb  work_bench.ipynb
pythonEnv/tests/M02M4_testing/: M0_analysis.ipynb  M0_analysis_tLin.ipynb  M4_analysis.ipynb  M4_analysis_tLin.ipynb  README.md  analysis_plotter_2Pins.py  analysis_plotter_tLin.py
pythonEnv/tests/SerialCom/: Read_micoC_output.py  serialtests.ipynb
pythonEnv/tests/azinn_testing/: M0_baud_analysis.ipynb  M0_serial_analysis.ipynb  M4_serial_analysis.ipynb  README.md  analysis_plotter_serial.py  import_serial.py  work_bench_serial.ipynb
pythonEnv/tests/data/: 11110001.TXT  40060001.TXT  50010001.TXT
pythonEnv/tests/data2/: 16010001.txt  16010002.txt  16010003.txt  16020001.txt  16020002.txt  16020003.txt  16030001.txt  16030002.txt  16050001.txt
pythonEnv/tests/data2_21/: 21010002.TXT  21010003.TXT  21030002.TXT  21030003.TXT  21040003.TXT  21050002.TXT  21060001.TXT  21060003.TXT  21080001.TXT  21080003.TXT  21090001.TXT  21100003.TXT  21120002.TXT  21130003.TXT  21140002.TXT  21140003.TXT  21150003.TXT  21160003.TXT  21170001.TXT  21170003.TXT  21180001.TXT  (+33 more)
(+755 files in other folders)
