[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts" },
    { include = "helper_files" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = ">=3.9"
# python = "^3.8"
pyserial = "^3.5"
numpy = "^1.24.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"
matplotlib = "^3.7.2"
progressbar = "^2.5"
# ipympl = "^0.9.3"
pandas = "^2.1.3"
ipykernel = "^6.29.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
